; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/kvm/x86_64/extr_vmx_tsc_adjust_test.c_l2_guest_code.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/kvm/x86_64/extr_vmx_tsc_adjust_test.c_l2_guest_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TSC_OFFSET_VALUE = common dso_local global i64 0, align 8
@MSR_IA32_TSC = common dso_local global i32 0, align 4
@TSC_ADJUST_VALUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @l2_guest_code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l2_guest_code() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @rdtsc()
  %3 = load i64, i64* @TSC_OFFSET_VALUE, align 8
  %4 = sub nsw i64 %2, %3
  store i64 %4, i64* %1, align 8
  %5 = load i32, i32* @MSR_IA32_TSC, align 4
  %6 = load i64, i64* %1, align 8
  %7 = load i32, i32* @TSC_ADJUST_VALUE, align 4
  %8 = sext i32 %7 to i64
  %9 = sub nsw i64 %6, %8
  %10 = call i32 @wrmsr(i32 %5, i64 %9)
  %11 = load i32, i32* @TSC_ADJUST_VALUE, align 4
  %12 = mul nsw i32 -2, %11
  %13 = call i32 @check_ia32_tsc_adjust(i32 %12)
  call void asm sideeffect "vmcall", "~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  ret void
}

declare dso_local i64 @rdtsc(...) #1

declare dso_local i32 @wrmsr(i32, i64) #1

declare dso_local i32 @check_ia32_tsc_adjust(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 560}
